[tool.poetry]
name = "pydata"
version = "0.1.0"
description = ""
authors = ["pehan <pehan@dfds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.4.1874"
numpy = "^1.23.4"
altair = "^4.2.0"
altair-saver = "^0.5.0"
selenium = "4.2.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.982"
pylint = "^2.15.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100
